2003-08-05  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b99

	* synced all languages
	
	* switched back from nb_NO to no_NO

	* updated german translation

2003-08-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b98
	
	* added text alignment for Hebrew.  Was in original multilanguage 
	  branch.  Only used in albums.php (so far).

2003-08-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b97
	
	* Code tweaked to reduce warnings in setup when error_reporting(E_ALL) 
	  is used

2003-08-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b96

	* Removed just introduced bug where locale alternative would not 
	  be saved if there was only one alternative.

2003-08-04  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b95
	
	* Code tweaked to reduce warnings in setup when error_reporting(E_ALL) 
	  is used

2003-08-04  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b94
	
	* Code tweaked to reduce warnings in setup when error_reporting(E_ALL) 
	  is used

2003-08-05  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b93

	* updated polish translation

2003-08-04  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b92

	* Revert back to -b88 (but with the changes made in -b90 by joan)
	  as this is causing a bunch of notices and may cause more trouble
	  than it's worth

2003-08-04  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b91

	* Remove warnings I introduced in -b89

2003-08-04  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b90

	* Code tweaked to reduce warnings in setup when error_reporting(E_ALL) 
	  is used

2003-08-04  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b89

	* Remove unnecessary eval()'s from the config wizard

2003-08-04  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b88

	* Strip slashes from title, summary, extra fields if magic quotes are 
	  on, as suggested by BorgKing.  This should improve behaviour when
	  magic quotes are on.

2003-08-01  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b87
