@@ -1,3 +1,9 @@
+2003-08-06  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b100
+
+	* fixed alignment bug, which caused gallery to render site incorrect
+
+	* removed alignment() and use $gallery->align
+
 2003-08-05  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b99
 
 	* synced all languages
